@@ -1,0 +1,29 @@
+<span id="" class="" i18n:domain="plone.formwidget.namedfile"
+      tal:attributes="id view/id;
+                      class view/klass;
+                      style view/style;
+                      title view/title;
+                      lang view/lang;
+                      onclick view/onclick;
+                      ondblclick view/ondblclick;
+                      onmousedown view/onmousedown;
+                      onmouseup view/onmouseup;
+                      onmouseover view/onmouseover;
+                      onmousemove view/onmousemove;
+                      onmouseout view/onmouseout;
+                      onkeypress view/onkeypress;
+                      onkeydown view/onkeydown;
+                      onkeyup view/onkeyup"
+        tal:define="value view/value;
+                    exists python:value is not None">
+    <span tal:define="fieldname view/field/__name__ | nothing;
+                      filename view/filename;
+                      filename_encoded view/filename_encoded;"
+            tal:condition="python: exists and fieldname">
+        <span tal:content="filename">Filename</span>
+        <span class="discreet"> &mdash; <span tal:define="sizekb view/file_size" tal:replace="sizekb">100</span> KB</span>
+    </span>
+    <span tal:condition="not:exists" class="discreet" i18n:translate="no_file">
+        No file
+    </span>
+</span>
