@@ -1,0 +1,84 @@
+<span
+    i18n:domain="plone.formwidget.namedfile"
+    tal:attributes="id view/id;
+                    class view/klass;
+                    style view/style;
+                    title view/title;
+                    lang view/lang;
+                    onclick view/onclick;
+                    ondblclick view/ondblclick;
+                    onmousedown view/onmousedown;
+                    onmouseup view/onmouseup;
+                    onmouseover view/onmouseover;
+                    onmousemove view/onmousemove;
+                    onmouseout view/onmouseout;
+                    onkeypress view/onkeypress;
+                    onkeydown view/onkeydown;
+                    onkeyup view/onkeyup;
+                    onfocus view/onfocus;
+                    onblur view/onblur;
+                    onchange view/onchange;
+                    readonly view/readonly;
+                    accesskey view/accesskey;
+                    onselect view/onselect;"
+    tal:define="exists python: view.value is not None;
+                action view/action;
+                allow_nochange view/allow_nochange;">
+    <span tal:condition="python: exists and action=='nochange'">
+        <span tal:content="view/filename">Filename</span>
+        <span class="discreet"> &mdash;
+            <span tal:define="sizekb view/file_size" tal:replace="sizekb">100</span> KB
+        </span>
+    </span>
+    <div tal:condition="allow_nochange" style="padding-top: 1em;">
+        <input
+            type="radio"
+            value="nochange"
+            class="noborder"
+            tal:attributes="name string:${view/name}.action;
+                            id string:${view/id}-nochange;
+                            onclick string:document.getElementById('${view/id}-input').disabled=true;
+                            checked python:(action == 'nochange') and 'checked' or None;"
+            />
+        <label
+            tal:attributes="for string:${view/id}-nochange" i18n:translate="file_keep">Keep existing file</label>
+        <tal:block condition="not:view/field/required">
+            <br />
+            <input
+                type="radio"
+                value="remove"
+                class="noborder"
+                tal:attributes="name string:${view/name}.action;
+                                id string:${view/id}-remove;
+                                onclick string:document.getElementById('${view/id}-input').disabled=true;
+                                checked python:action == 'remove' and 'checked' or None;"
+                />
+            <label
+                tal:attributes="for string:${view/id}-remove" i18n:translate="file_remove">Remove existing file</label>
+        </tal:block>
+        <br />
+        <input
+            type="radio"
+            value="replace"
+            class="noborder"
+            tal:attributes="name string:${view/name}.action;
+                            id string:${view/id}-replace;
+                            onclick string:document.getElementById('${view/id}-input').disabled=false;
+                            checked python:action == 'replace' and 'checked' or None;" />
+        <label
+            tal:attributes="for string:${view/id}-replace" i18n:translate="file_replace">Replace with new file</label>
+    </div>
+    <div tal:omit-tag="not:allow_nochange" style="padding-left: 1.5em; padding-top: 0.5em;">
+        <input
+            type="file"
+            tal:attributes="id string:${view/id}-input;
+                            name view/name;
+                            size view/size;
+                            disabled view/disabled;
+                            maxlength view/maxlength;"
+            />
+        <script tal:condition="python:allow_nochange and action != 'replace'" type="text/javascript"
+            tal:content="string:document.getElementById('${view/id}-input').disabled=true;">
+        </script>
+    </div>
+</span>
