@@ -5,7 +5,9 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implements document specifig forwidget.namedfile modes,
+  which doesn't display a file-donwlaod link.
+  [phgross]
 
 
 2.4.2 (2012-12-07)
